remove beta access from allowance

--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -159,7 +159,7 @@ const allowanceTransferMetaTransaction =
 ```
 
 :::info
-Candide offers an automation tool to execute delegated allowances. Contact us directly for Beta access.
+Candide offers a secure and automated tool to execute delegated allowances. Contact us directly via our channels or email team@candidelabs.com.
 :::
 
 ## Methods
