replace safecover link with recovery.candide.dev

--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -60,7 +60,7 @@ Learn more on how the Social Recovery Module work on this [post](../../../blog/m
 
 Built to serve as a secondary interface for users to recover their Safe accounts
 
-- Link: https://safecover.eth.limo
+- Link: https://recovery.candide.dev
 - Source code for releases: [candidelabs/safecover](https://github.com/candidelabs/safecover)
 
 #### Safe Recovery Services
