add spend permission example to allowance module

--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -91,7 +91,7 @@ While `createBase` methods enable direct contract interaction, they can be compl
 
 
 :::tip
-If you're looking for a code example, take a look at [Allowance Module tests](https://github.com/candidelabs/abstractionkit/blob/main/test/safe/allowanceModule.test.js)  
+If you're looking for a code example, take a look at the [Spend Permission example](https://github.com/candidelabs/abstractionkit-examples/blob/main/spend-permission/spend-permission.ts) and the [Allowance Module tests](https://github.com/candidelabs/abstractionkit/blob/main/test/safe/allowanceModule.test.js)  
 :::
 
 ### 1. Initialize the Module 
