remove pre-release from recovery service

--- a/docs/wallet/recovery/3-auth-api.mdx
+++ b/docs/wallet/recovery/3-auth-api.mdx
@@ -31,7 +31,7 @@ A Safe guardian service that uses email and phone verification to facilitate acc
 with other guardians (such as hardware wallets or trusted contacts) to create a customized recovery threshold.
 
 :::info
-The following API is in a pre-release phase. [Request access here](https://app.formbricks.com/s/brdzlw0t897cz3mxl3ausfb5).    
+To get started, request an API key [here](https://app.formbricks.com/s/brdzlw0t897cz3mxl3ausfb5).
 :::
 
 **/auth** (Registration)
