--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -1,533 +1,41 @@
 ---
-title: Account Recovery guide and reference for adding recovery methods for Safe Accounts using abstractionkit
+title: Account Recovery
 description: Active onchain account recovery with guardians through a time delay for Safe Accounts.
 keywords: [guardian, recovery, social-recovery, safe-recovery, gnosis-safe]
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
-import { DataTable } from "/src/components/Table";
-import {
-  createEnableModuleParams,
-  createConfirmRecoveryParams,
-  createMultiConfirmRecoveryParams,
-  createExecuteRecoveryParams,
-  createFinalizeRecoveryParams,
-  createCancelRecoveryParams,
-  createAddGuardianWithThresholdParams,
-  createRevokeGuardianWithThresholdParams,
-  createChangeThresholdMetaTransactionParams,
-  getRecoveryHashParams,
-  getRecoveryRequestParams,
-  getRecoveryApprovalsParams,
-  hasGuardianApprovedParams,
-  isGuardianParams,
-  guardiansCountParams,
-  thresholdParams,
-  getGuardiansParams,
-  nonceParams,
-  RecoveryRequestParams,
-  sendEthCallRequestParams
-} from "../../../src/data/recoveryParams";
-import { metaTransactionType } from "../../../src/data/accountParamAndReturnData";
+# Account Recovery
 
-# How to Enable Account Recovery
+Social Recovery allows users to regain control of their accounts by replacing the owner key through a set of trusted Guardians, with a built-in time delay so owners can cancel unauthorized attempts.
 
-## Intro
+The Candide Social Recovery Module accepts any Ethereum address as a guardian: family and friends' wallets, hardware wallets, institutions, or email/SMS cloud wallets.
 
-Social Recovery is widely accepted as an effective method for users to regain control 
-of their accounts by changing the main access control to a new owner through their trusted contacts. 
-Account Recovery modules allow owners to add recovery addresses, known as Guardians, 
-to facilitate this process in case their signer key is lost or compromised. 
+## Recovery Methods
 
-The Candide Social Recovery Module is flexible to accept various types of Ethereum accounts as Guardians, including:
-- Family and friends'
-- Hardware wallets
-- Institutions
-- Email / SMS (through custodial services offering cloud-based wallets)
+Both recovery methods can be used independently or combined. For maximum security, use both. For example, a 2-of-3 setup with two personal guardians and email/SMS recovery as the third.
 
-Learn more on how the Social Recovery Module work on this [post](../../../blog/making-accounts-recoverable/).
+| | Personal Guardians | Email / SMS Recovery |
+|---|---|---|
+| **Guardian type** | Users add their own guardians | Candide signs after email/SMS OTP |
+| **Key management** | Required (guardian private keys) | Not required |
+| **Best for** | Trusted contacts, hardware wallets | Consumer apps, users who prefer email/SMS |
+| **Setup guides** | Add Guardian → Recovery Flow → Alerts | Enable Email/SMS → Recovery Flow |
 
-#### Audits
 
-- Contracts, Formal Verification and Audits be found on the github repo [candide-contracts](https://github.com/candidelabs/candide-contracts).
+## Getting Started
 
-#### Deployment addresses
+### Personal Guardians
+Start with [Add a Guardian](/wallet/plugins/how-to-add-a-guardian/), then follow the [Recovery Flow Guide](/wallet/plugins/recovery-flow-guide/) and [Recovery Alerts Guide](/wallet/plugins/recovery-alerts-guide/).
 
-- Deployment addresses for different grace periods can be found [here](/wallet/technical-reference/deployments/#social-recovery-module).
 
-#### Frontend: SafeCover
+### Email / SMS Recovery
+Start with [Enable Email / SMS Recovery](/wallet/plugins/add-candide-guardian/), then follow the [Recovery Flow](/wallet/plugins/recover-account-candide-guardian/) guide.
 
-Built to serve as a secondary interface for users to recover their Safe accounts
+## Resources
 
-- Link: https://recovery.candide.dev
-- Source code for releases: [candidelabs/safecover](https://github.com/candidelabs/safecover)
-
-#### Safe Recovery Services
-
-Secure Safe Accounts with a diverse set of recovery options like trusted contacts, email/SMS verification, Passkeys, secondary devices and more. 
-
-- Offer email / sms recovery with Candide as a Guardian. 
-- Offer an alert system for owners to get notified in case of recovery.
-
-Learn more on [Safe Recovery Services](/wallet/recovery/overview/)
-
-## Usage
-
-### Install
-
-:::tip
-Prefer to run a simple example? Fork this repo and add your first guardian [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/recovery/recovery.ts). 
-:::
-
-<Tabs>
-<TabItem value="npm" label="npm">
-
-```bash
-npm i abstractionkit
-```
-
-</TabItem>
-<TabItem value="yarn" label="yarn">
-
-```bash
-yarn add abstractionkit
-```
-
-</TabItem>
-</Tabs>
-
-### Import
- 
-```ts
-import { SocialRecoveryModule } from "abstractionkit";
-```
-### How to use
-
-Initialize a SocialRecoveryModule instance. By default, the grace period for recovery is set to 3 days. 
-
-```ts
-const srm = new SocialRecoveryModule(); // 3 days
-```
-
-If you need a different grace period, you can override it by providing 
-a [different grace period address](/wallet/technical-reference/deployments/#social-recovery-module)
-during initialization.
-```ts
-import { SocialRecoveryModule, SocialRecoveryModuleGracePeriodSelector } from "abstractionkit";
- 
-const gracePeriod = SocialRecoveryModuleGracePeriodSelector.After7Days;
-const srm = new SocialRecovery(gracePeriod); // 7 days
-```
-
-Then consume the module methods like the following:
-```ts
-const accountAddress = "0x1.."
-const guardianAddress= "0x2.."
-
-const metaTransaction1 = srm.createEnableModuleMetaTransaction(accountAddress);
-
-const metaTransaction2 = srm.createAddGuardianWithThresholdMetaTransaction(
-    guardianAddress,
-    1n //threshold
-);
-```
-
-## Setup Guardians
-
-### createEnableModuleMetaTransaction
-
-Active the recovery plugin for the smart account
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createEnableModuleParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-
-### createAddGuardianWithThresholdMetaTransaction
-
-Creates a MetaTransaction that lets the owner add a guardian for its account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createAddGuardianWithThresholdParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-## Change Guardians Setup
-
-### createRevokeGuardianWithThresholdMetaTransaction
-
-Creates a MetaTransaction that lets the owner revoke a guardian from its account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createRevokeGuardianWithThresholdParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-### createChangeThresholdMetaTransaction
-
-Creates a MetaTransaction that lets the owner change the guardian threshold required to initiate a recovery.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createChangeThresholdMetaTransactionParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-
-## Recover
-
-### createConfirmRecoveryMetaTransaction
-
-Creates a MetaTransaction that lets a single guardian confirm the execution of the recovery request.
-It can also trigger the start of the execution by passing true to 'execute' parameter. 
-Once triggered, the recovery will started the recovery period delay, before it can be finalised.
-
-<Tabs>
-<TabItem value="Param type" label="Param Types">
-  <DataTable items={createConfirmRecoveryParams} />
-</TabItem>
-<TabItem value="Return type" label="Return Types">
-    <table>
-        <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-        </thead>
-        <tbody>
-        <tr>
-            <td>MetaTransaction</td>
-            <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-            </td>
-            <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation
-            </td>
-        </tr>
-        </tbody>
-  </table>
-</TabItem>
-</Tabs>
-
-### createMultiConfirmRecoveryMetaTransaction
-
-Creates a MetaTransaction that lets multiple guardians confirm the execution of the recovery request.
-It can also trigger the start of the execution by passing true to 'execute' parameter. 
-Once triggered, the recovery will start the recovery period delay, before it can be finalised.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createMultiConfirmRecoveryParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-        <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-        </thead>
-        <tbody>
-        <tr>
-            <td>MetaTransaction</td>
-            <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-            </td>
-            <td align="left">
-                MetaTransaction is the type of a transaction to construct a Safe operation
-            </td>
-        </tr>
-        </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-### createExecuteRecoveryMetaTransaction
-
-Creates a MetaTransaction that lets the guardians start the execution of the recovery request. Once triggered, the recovery will be pending for the recovery period before it can be finalized.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createExecuteRecoveryParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-### createFinalizeRecoveryMetaTransaction
-
-Creates a MetaTransaction that finalizes an ongoing recovery request if the recovery period is over. The method is public and callable by anyone to enable orchestration.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createFinalizeRecoveryParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-## Cancel a Recovery
-
-### createCancelRecoveryMetaTransaction
-
-Creates a MetaTransaction that lets the account cancel an ongoing recovery request.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={createCancelRecoveryParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <table>
-      <thead>
-        <th align="left">Param Name</th>
-        <th align="left">Param Type</th>
-        <th align="left">Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>MetaTransaction</td>
-          <td align="left">
-            <p><font color="#22c916">MetaTransaction</font></p>
-            <DataTable items={metaTransactionType} />
-          </td>
-          <td align="left">
-            MetaTransaction is the type of a transaction to construct a Safe operation.
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </TabItem>
-</Tabs>
-
-## Helpers
-
-### hasGuardianApproved
-
-Retrieves specific guardian approval status for a particular recovery request at the current nonce.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={hasGuardianApprovedParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>Boolean</p>
-  </TabItem>
-</Tabs>
-
-### isGuardian
-
-Checks if an address is a guardian for an account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={isGuardianParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>Boolean</p>
-  </TabItem>
-</Tabs>
-
-### guardiansCount
-
-Counts the number of active guardians for an account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={guardiansCountParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>BigInt</p>
-  </TabItem>
-</Tabs>
-
-### threshold
-
-Retrieves the guardians threshold for the account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={thresholdParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>BigInt</p>
-  </TabItem>
-</Tabs>
-
-### getGuardians
-
-Get the active guardians for an account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={getGuardiansParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>String[]</p>
-  </TabItem>
-</Tabs>
-
-### getRecoveryRequest
-
-Retrieves the account's current ongoing recovery request.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={getRecoveryRequestParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <DataTable items={RecoveryRequestParams} />
-  </TabItem>
-</Tabs>
-
-### getRecoveryApprovals
-
-Retrieves the guardian approval count for this particular recovery request at the current nonce.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={getRecoveryApprovalsParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>BigInt</p>
-  </TabItem>
-</Tabs>
-
-### nonce
-
-Get the module nonce for an account.
-
-<Tabs>
-  <TabItem value="Param type" label="Param Types">
-    <DataTable items={nonceParams} />
-  </TabItem>
-  <TabItem value="Return type" label="Return Types">
-    <p>BigInt</p>
-  </TabItem>
-</Tabs>
+- **How it works**: [Making Accounts Recoverable](/blog/making-accounts-recoverable/)
+- **Contracts, audits & formal verification**: [candide-contracts](https://github.com/candidelabs/candide-contracts)
+- **Deployment addresses**: [Social Recovery Module](/wallet/technical-reference/deployments/#social-recovery-module)
+- **Recovery frontend (SafeCover)**: [recovery.candide.dev](https://recovery.candide.dev) ([source](https://github.com/candidelabs/safecover))
+- **Recovery Service API**: [Safe Recovery Services](/wallet/recovery/overview/)
+- **SDK Reference**: [SocialRecoveryModule](/wallet/plugins/recovery-module-reference/)
