add title and subtitle

--- a/docs/wallet/pricing.mdx
+++ b/docs/wallet/pricing.mdx
@@ -14,6 +14,10 @@ import CTASection from '/src/components/CTASection';
 The pricing below applies starting **April 1, 2026**. Existing accounts will be notified before any changes take effect.
 :::
 
+# The Fastest Path to Production.
+
+From your first line of code to your millionth transaction, we give you the infrastructure and support to ship fast and scale confidently.
+
 Start building for free. The Starter tier includes the complete AbstractionKit SDK, all account features (Passkeys, Social Recovery, Unified Accounts), and unlimited testnet access — no credit card required. With 2,500 mainnet UserOps on the free tier, it's the most generous free tier in the industry. Upgrade when you're ready to go to production.
 
 <PricingCards />
