fix support hours

--- a/docs/wallet/pricing.mdx
+++ b/docs/wallet/pricing.mdx
@@ -76,7 +76,7 @@ Networks not available by default at Candide that can be supported on request. A
 #### What support do I get with each tier?
 - Starter: Community Discord (best-effort)
 - Launch: Slack/Telegram (24h response) — reactive support. You ask, we answer any question
-- Grow: Slack/Telegram (4h — business hours and nights & weekends) + dedicated account team who proactively monitors your account
+- Grow: Slack/Telegram (4h business hours / 6h nights & weekends) + dedicated account team who proactively monitors your account
 - Enterprise: Slack/Telegram (1h business hours / 4h nights & weekends) + dedicated account team with 24/7 incident response
 
 #### What is Flash Support?
