fix account plugin included*

--- a/docs/wallet/pricing.mdx
+++ b/docs/wallet/pricing.mdx
@@ -64,10 +64,10 @@ Reach out for custom quotes or add-ons.
 
 ---
 
-### Custom Networks
+### Exclusive Networks
 
-#### What is a Custom Network?
-Networks not available by default at Candide that can be supported on request. Any EVM-equivalent chain is supported — including your own L2 (Arbitrum Orbit, OP Stack, Polygon CDK, ZK Stack, etc.). We deploy all smart contracts and bundler infrastructure. [Contact us](https://t.me/candideWallet) for pricing.
+#### What is an Exclusive Network?
+Networks not available by default at Candide that can be supported on request. Any EVM-equivalent chain is supported — including your own L2 (Arbitrum Orbit, OP Stack, Polygon CDK, ZK Stack, etc.). We deploy all smart contracts and bundler infrastructure.
 
 ---
 
