--- a/docs/wallet/plugins/3-how-to-add-a-guardian.mdx
+++ b/docs/wallet/plugins/3-how-to-add-a-guardian.mdx
@@ -20,20 +20,19 @@ Learn how to enable the [Social Recovery Module](/wallet/plugins/recovery-with-g
 ### Installation
 
 - `abstractionkit` provides the core functionality for interacting with social recovery module smart contracts and constructing calldata. 
-- `safe-recovery-service-sdk` adds optional API services including alerts, recovery via email/SMS, and additional recovery features.
 
 <Tabs>
 <TabItem value="npm" label="npm">
 
 ```bash
-npm i abstractionkit safe-recovery-service-sdk
+npm i abstractionkit
 ```
 
 </TabItem>
 <TabItem value="yarn" label="yarn">
 
 ```bash
-yarn add abstractionkit safe-recovery-service-sdk
+yarn add abstractionkit
 ```
 </TabItem>
 </Tabs>
